--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
     <!-- Header with Logo -->
     <header>
-        <img src="logo.png" alt="Closers Toolbox" class="logo">
+        <img src="closers_toolbox_logo.png" alt="Closers Toolbox" class="logo">
     </header>
 
     <!-- Dashboard Panels -->
